Fix LineLimitedString ignoring trailing newlines